<resources>
    <string name="app_name">OMVRemote base</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_user">User</string>
    <string name="prompt_website">(host) 127.0.0.1</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="short_description">Application who quickly manage openmediavault.</string>
    <string name="full_description">This application aims to control OMV directly with its smartphone.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">OMV Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_packages_infomation">Package Infomation</string>
    <string name="title_activity_file_systems">File Systems</string>
    <string name="title_activity_plugins">Plugins</string>
    <string name="title_activity_omv_extras">OMV-extras.org</string>
    <string name="title_activity_web_administration">Web Administration</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="SharedFolder">SharedFolder</string>
    <string name="SharedFolderName">Shared folder name</string>
    <string name="Comment">Comment</string>
    <string name="Public">Public</string>
    <string name="ReadOnly">ReadOnly</string>
    <string name="Browsable">Browsable</string>
    <string name="nav_home">Home</string>
    <string name="nav_update">Update</string>
    <string name="nav_disk">File Systems</string>
    <string name="nav_plugin">Plugin</string>
    <string name="nav_extra">OMV-Extra</string>
    <string name="nav_certificate">Certificates</string>
    <string name="nav_host">Manage hosts</string>
    <string name="nav_about">About</string>
    <string name="nav_logs">Logs</string>
    <string name="nav_cron">Scheduled Jobs</string>
    <string name="nav_Command">Command</string>
    <string name="Cycles">Cycles</string>
    <string name="info_Autoshutdown_Cycles">Set the number of cycles with no result (no PC online, etc) before shutdown.</string>
    <string name="Sleep">Sleep</string>
    <string name="info_Autoshutdown_Sleep">Numbers of seconds between each cycle.</string>
    <string name="Shutdown_Command">Shutdown Command</string>
    <string name="Uphours_Begin">Uphours Begin</string>
    <string name="Uphours_End">Uphours End</string>
    <string name="Check_Clock">Check Clock</string>
    <string name="info_Autoshutdown_CheckClock">Check Clock to identify forced uptime.</string>
    <string name="IP_Range">IP-Range</string>
    <string name="info_Autoshutdown_IPRange"><![CDATA[Define a range of IPs which should be scanned, via XXX.XXX.XXX.xxx last triple of IP address in a list.\n
    The following scheme is mandatoryv..v+m,w,x..x+n,y+o..y,z\n
    - define an ip range : start..end -> the two dots are mandatory\n
    - define a single ip : ip\n
    - all list entries are seperated by comma \',\'\n
    Please make sure to leave 1 and 255 out of the list!\n
    Enter a single dash \'-\' in the field to disable check.]]>
    </string>
    <string name="Sockets">Sockets</string>
    <string name="info_Autoshutdown_Sockets">Socket number to check for activity.</string>
    <string name="ULDL_Rate">ULDL Rate</string>
    <string name="info_Autoshutdown_ULDLRate">Define the network traffic in kB/s</string>
    <string name="Load_Average">Load Average</string>
    <string name="info_Autoshutdown_LoadAverage">If the load average of the server is above this value, then no shutdown. Example: 50 means a loadaverage of 0.50, 8 means a loadaverage of 0.08, 220 means a loadaverage of 2.20</string>
    <string name="HDDIO_Rate">HDDIO_Rate</string>
    <string name="info_Autoshutdown_HDDIORate">If the HDD-IO-average of the server is above this value, then no shutdown.</string>
    <string name="Check_smbstatus">Check smbstatus</string>
    <string name="info_Autoshutdown_Checksmbstatus">Check smbstatus for connected clients.</string>
    <string name="Check_Users">Check Users</string>
    <string name="info_Autoshutdown_CheckUsers">Check for connected users.</string>
    <string name="Log_to_Syslog">Log to Syslog</string>
    <string name="info_Autoshutdown_LogToSyslog">Write log informations to system logs.</string>
    <string name="Verbose">Verbose</string>
    <string name="info_Autoshutdown_Verbose">Verbose mode.</string>
    <string name="Fake">Fake</string>
    <string name="info_Autoshutdown_Fake">Fake/Test mode.</string>
    <string name="Extra_Options">Extra Options</string>
</resources>