<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dev.doods.omvremote2.Plugins.Autoshutdown.AutoshutdownActivity"
    tools:showIn="@layout/activity_autoshutdown">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="8dp"
        card_view:cardCornerRadius="@dimen/card_album_radius"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">
        <Switch
            android:layout_margin="8dp"
            android:id="@+id/swithEnable"
            android:text="Enable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="8dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Cycles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Cycles"
                    android:imeActionId="@+id/Cycles"
                    android:imeActionLabel="@string/Cycles"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_Autoshutdown_Cycles"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Sleep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Sleep"
                    android:imeActionId="@+id/Sleep"
                    android:imeActionLabel="@string/Sleep"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_Autoshutdown_Sleep"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:text="@string/Shutdown_Command"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerShutdownCommand"
                    />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="8dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Switch
            android:layout_margin="8dp"
            android:id="@+id/swithCheckClock"
            android:text="@string/Check_Clock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:text="@string/info_Autoshutdown_CheckClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Uphours_Begin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Uphours_Begin"
                android:imeActionId="@+id/Uphours_Begin"
                android:imeActionLabel="@string/Uphours_Begin"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Uphours_End"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Uphours_End"
                android:imeActionId="@+id/Uphours_End"
                android:imeActionLabel="@string/Uphours_End"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            android:elevation="8dp"
            card_view:cardCornerRadius="@dimen/card_album_radius">
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/IP_Range"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/IP_Range"
                        android:imeActionId="@+id/IP_Range"
                        android:imeActionLabel="@string/IP_Range"
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_Autoshutdown_IPRange"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/Sockets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Sockets"
                        android:imeActionId="@+id/Sockets"
                        android:imeActionLabel="@string/Sockets"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_Autoshutdown_Sockets"/>


                <Switch
                    android:layout_margin="8dp"
                    android:id="@+id/swithULDLRate"
                    android:text="@string/ULDL_Rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/ULDL_Rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ULDL_Rate"
                        android:imeActionId="@+id/ULDL_Rate"
                        android:imeActionLabel="@string/ULDL_Rate"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_Autoshutdown_ULDLRate"/>

                <Switch
                    android:layout_margin="8dp"
                    android:id="@+id/swithLoadAverage"
                    android:text="@string/Load_Average"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/Load_Average"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Load_Average"
                        android:imeActionId="@+id/Load_Average"
                        android:imeActionLabel="@string/Load_Average"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_Autoshutdown_LoadAverage"/>

                <Switch
                    android:layout_margin="8dp"
                    android:id="@+id/swithHDDIORate"
                    android:text="@string/HDDIO_Rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/HDDIO_Rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/HDDIO_Rate"
                        android:imeActionId="@+id/HDDIO_Rate"
                        android:imeActionLabel="@string/HDDIO_Rate"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_Autoshutdown_HDDIORate"/>


                <Switch
                    android:layout_margin="8dp"
                    android:id="@+id/swithCheckSmbstatus"
                    android:text="@string/Check_smbstatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:text="@string/info_Autoshutdown_Checksmbstatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <Switch
                    android:layout_margin="8dp"
                    android:id="@+id/swithCheckUsers"
                    android:text="@string/Check_Users"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:text="@string/info_Autoshutdown_CheckUsers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="8dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Switch
            android:layout_margin="8dp"
            android:id="@+id/swithLogToSyslog"
            android:text="@string/Log_to_Syslog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:text="@string/info_Autoshutdown_LogToSyslog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Switch
            android:layout_margin="8dp"
            android:id="@+id/swithVerbose"
            android:text="@string/Verbose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:text="@string/info_Autoshutdown_Verbose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Switch
            android:layout_margin="8dp"
            android:id="@+id/swithFake"
            android:text="@string/Fake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:text="@string/info_Autoshutdown_Fake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
    </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            android:elevation="8dp"
            card_view:cardCornerRadius="@dimen/card_album_radius"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Extra_Options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Extra_Options"
                    android:imeActionId="@+id/Extra_Options"
                    android:imeActionLabel="@string/Extra_Options"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
